glx/testdata/invalid/broken-references/assertions/assertion-marriage.glx
assertions:
  assertion-marriage-date:
    subject: rel-marriage-john-mary
    claim: started_on
    value: "1875-05-10"
    citations:
      - citation-marriage
    confidence: high
    sources:
      - source-parish-leeds
    notes: "Marriage date from parish register"
